# kaidol-vtuber

./: .gitignore  README.md  docker-compose.yml  test_services.sh
rust-backend/: Cargo.toml  Dockerfile  README.md  conf.json  conf.jsonld
rust-backend/python-services/: Dockerfile  tts_service.py
rust-backend/python-services/chat_platforms/: base_platform.py  pump_fun_client.py
rust-backend/python-services/rvc/inferrvc/: __init__.py
rust-backend/src/: chat_history.rs  config.rs  handlers.rs  main.rs  python_service.rs  routes.rs  state.rs  websocket.rs
rust-backend/src/adapters/: base_adapter.rs  mod.rs  orphiq_adapter.rs
rust-backend/src/agent/: agent_factory.rs  input_types.rs  interface.rs  mod.rs  output_types.rs  stateless_llm_factory.rs  transformers.rs
rust-backend/src/agent/agents/: agent_interface.rs  basic_memory_agent.rs  hume_ai.rs  mem0_llm.rs  mod.rs
rust-backend/src/agent/stateless_llm/: claude_llm.rs  llama_cpp_llm.rs  mod.rs  (+3 more)
rust-backend/src/asr/: interface.rs  mod.rs
rust-backend/src/config_manager/: agent.rs  asr.rs  character.rs  i18n.rs  interfaces.rs  main.rs  mod.rs  stateless_llm.rs  system.rs  translate.rs  tts.rs  tts_preprocessor.rs  utils.rs  vad.rs
rust-backend/src/conversations/: group_conversation.rs  handler.rs  mod.rs  single_conversation.rs  types.rs  utils.rs
rust-backend/src/translate/: interface.rs  mod.rs
rust-backend/src/tts/: client.rs  factory.rs  interface.rs  mod.rs
rust-backend/src/utils/: mod.rs  sentence_divider.rs  stream_audio.rs  tts_preprocessor.rs
rust-backend/src/vad/: interface.rs  mod.rs
(+72 files in other folders)
